tests/snapshots/compile_file_o_all__non_exhaustive_and.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/non_exhaustive_and.bend
---
[4m[1m[31mErrors:[0m
[1mIn [4mtests/golden_tests/compile_file_o_all/non_exhaustive_and.bend[0m[1m :[0m
[1mIn definition '[4mBool.and[0m[1m':[0m
  Non-exhaustive pattern matching rule. Constructor 'Bool/False' of type 'Bool' not covered
