tests/snapshots/compile_file_o_all__non_exhaustive_different_types.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/non_exhaustive_different_types.hvm
---
In definition 'foo': Non-exhaustive pattern. Hint: (foo f1 f2 t3 f4) not covered.
