tests/snapshots/compile_file_o_all__non_exhaustive_pattern.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/non_exhaustive_pattern.bend
---
[4m[1m[31mErrors:[0m
[1mIn [4mtests/golden_tests/compile_file_o_all/non_exhaustive_pattern.bend[0m[1m :[0m
[1mIn definition '[4mFoo[0m[1m':[0m
  Non-exhaustive pattern matching rule. Constructor 'Type/A' of type 'Type' not covered
