tests/snapshots/compile_file_o_all__non_exhaustive_pattern.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/non_exhaustive_pattern.hvm
---
In definition 'Foo': Non-exhaustive pattern. Hint: (Foo A A A A) not covered.
