tests/snapshots/compile_file_o_all__non_exhaustive_tree.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/non_exhaustive_tree.bend
---
[4m[1m[31mErrors:[0m
[1mIn definition '[4mWarp[0m[1m':[0m
  Non-exhaustive pattern matching rule. Constructor 'Tree/Leaf' of type 'Tree' not covered
