tests/snapshots/compile_file_o_all__num_pattern_with_var.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/num_pattern_with_var.hvm
---
@9 = (* #0)
@A = #0
@B = (a a)
@F = (?<(@A @B) a> a)
@Foo = ({2 @9 {2 @F a}} a)
@main = a
& @Foo ~ (@true (#3 a))
@true = {2 * {2 a a}}

