tests/snapshots/compile_file_o_all__recursive_combinator_inactive.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/recursive_combinator_inactive.hvm
---
@Foo = (?<({3 @Foo @Foo} @a) a> a)
@a = (a (* a))
@main = a
& @Foo ~ (#0 a)

